Mejora la validación de entrada en registrarUsuario y ajusta la evaluación de resultados en Ruleta